--- a/src/components/landing.astro
+++ b/src/components/landing.astro
@@ -16,7 +16,7 @@ import videoSrc from "./assets/background.mp4";
     />
     <style>
       body {
-        font-family: "Roboto", sans-serif;
+        font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
         background: url("../../assets/background.mp4");
       }
       .background-video {
