--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -2,7 +2,7 @@
 // Navbar Component using Tailwind CSS in Astro
 ---
 
-<nav class="bg-[#2E2E2E] text-white p-4 sticky top-0">
+<nav class=" bg-[#141212] p-4 sticky top-0 shadow-md">
   <div class="flex justify-between items-center">
     <!-- Left side: logo and text -->
     <div class="flex items-center space-x-2">
