--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -19,5 +19,6 @@ import Navbar from "../components/navbar.astro";
   body {
     font-family: "Roboto", sans-serif;
     background: url("../../assets/background.mp4");
+    background-color: black;
   }
 </style>
