--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -2,8 +2,8 @@
 // Navbar Component using Tailwind CSS in Astro
 ---
 
-<nav class=" bg-[#141212] p-4 sticky top-0 shadow-md">
-  <div class="flex justify-between items-center">
+<nav class=" bg-[#141212] p-4  shadow-md">
+  <div class="flex justify-between mr-[4rem] items-center">
     <!-- Left side: logo and text -->
     <div class="flex items-center space-x-2">
       <img src="../../assets/logo.png" alt="Cosmira Logo" class="h-16" />
