--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -15,10 +15,10 @@ import Navbar from "../components/navbar.astro";
   </body>
 </html>
 
-<style is:global>
+<style>
   body {
     font-family: "Roboto", sans-serif;
-    background: url("../../assets/background.mp4");
+
     background-color: black;
   }
 </style>
