Added images of the objects and their  description

--- a/src/pages/space/earth.astro
+++ b/src/pages/space/earth.astro
@@ -4,7 +4,7 @@ import Sidebar from "../../components/sidebar.astro";
 
 const title = "Earth";
 
-const image = "../../../assets/planets/earth.png";
+const image = "../../../assets/Earth.gif";
 ---
 
 <Layout>
