--- a/src/pages/space/[...slug].astro
+++ b/src/pages/space/[...slug].astro
@@ -7,26 +7,93 @@ export async function getStaticPaths() {
     {
       slug: "sun",
       title: "Sun",
-      text: "lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vestibulum in vel, auctor viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus. lorem epsom dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vestibulum in vel, auctor viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vestibulum in vel, auctor viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus. lorem epsom dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vestibulum in vel, auctor viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.",
+      text: "The Sun is the star at the center of our Solar System. It is a nearly perfect sphere of hot plasma, heated to incandescence by nuclear fusion reactions in its core. The Sun radiates energy mainly as light, ultraviolet, and infrared radiation, and is the most important source of energy for life on Earth.",
       image: "../../../assets/Sun.gif",
+      sound: "../../../assets/Sun.mp3",
     },
     {
-      slug: "earth",
-      title: "Astro products",
-      text: "We have lots of products for you",
-      image: "../../../assets/planets/earth.png",
+      slug: "mercury",
+      title: "Mercury",
+      text: "Mercury is the smallest planet in the Solar System and the closest to the Sun. Its orbit around the Sun takes 87.97 Earth days, the shortest of all the Sun's planets. Mercury is one of four terrestrial planets in the Solar System, and is a rocky body like Earth.",
+      image: "../../../assets/Mercury.gif",
+      sound: "../../../assets/Mercury.mp3",
+    },
+    {
+      slug: "venus",
+      title: "Venus",
+      text: "Venus is the second planet from the Sun and is Earth's closest planetary neighbor. It's one of the four inner, terrestrial (or rocky) planets, and it's often called Earth's twin because it's similar in size and density. Venus has a thick, toxic atmosphere filled with carbon dioxide and it's perpetually shrouded in thick, yellowish clouds of sulfuric acid that trap heat, causing a runaway greenhouse effect.",
+      image: "../../../assets/Venus.gif",
+      sound: "../../../assets/Venus.mp3",
+    },
+    // {
+    //   slug: "earth",
+    //   title: "Earth",
+    //   text: "Earth is the third planet from the Sun and the only astronomical object known to harbor life. About 29.2% of Earth's surface is land consisting of continents and islands. The remaining 70.8% is covered with water, mostly by oceans, seas, gulfs, and other salt-water bodies, but also by lakes, rivers, and other fresh water, which together constitute the hydrosphere.",
+    //   image: "../../../assets/Earth.gif",
+    //   sound: "../../../assets/Earth.mp3",
+    // },
+    {
+      slug: "mars",
+      title: "Mars",
+      text: "Mars is the fourth planet from the Sun and the second-smallest planet in the Solar System, being larger than only Mercury. In English, Mars carries the name of the Roman god of war and is often referred to as the 'Red Planet'. The latter refers to the effect of the iron oxide prevalent on Mars's surface, which gives it a reddish appearance distinctive among the astronomical bodies visible to the naked eye.",
+      image: "../../../assets/Mars.gif",
+      sound: "../../../assets/Mars.mp3",
+    },
+    {
+      slug: "jupiter",
+      title: "Jupiter",
+      text: "Jupiter is the fifth planet from the Sun and the largest in the Solar System. It is a gas giant with a mass more than two and a half times that of all the other planets in the Solar System combined, but slightly less than one-thousandth the mass of the Sun. Jupiter is the third-brightest natural object in the Earth's night sky after the Moon and Venus.",
+      image: "../../../assets/Jupiter.gif",
+      sound: "../../../assets/Jupiter.mp3",
+    },
+    {
+      slug: "saturn",
+      title: "Saturn",
+      text: "Saturn is the sixth planet from the Sun and the second-largest in the Solar System, after Jupiter. It is a gas giant with an average radius of about nine times that of Earth. It only has one-eighth the average density of Earth; however, with its larger volume, Saturn is over 95 times more massive. Saturn is known for its prominent ring system, which is composed mainly of ice particles, with a smaller amount of rocky debris and dust.",
+      image: "../../../assets/Saturn.gif",
+      sound: "../../../assets/Saturn.mp3",
+    },
+    {
+      slug: "uranus",
+      title: "Uranus",
+      text: "Uranus is the seventh planet from the Sun. Its name is a reference to the Greek god of the sky, Uranus, who, according to Greek mythology, was the grandfather of Zeus (Jupiter) and father of Cronus (Saturn). It has the third-largest planetary radius and fourth-largest planetary mass in the Solar System. Uranus is similar in composition to Neptune, and both have bulk chemical compositions which differ from that of the larger gas giants Jupiter and Saturn.",
+      image: "../../../assets/Uranus.gif",
+      sound: "../../../assets/Uranus.mp3",
+    },
+    {
+      slug: "neptune",
+      title: "Neptune",
+      text: "Neptune is the eighth and farthest-known Solar planet from the Sun. In the Solar System, it is the fourth-largest planet by diameter, the third-most-massive planet, and the densest giant planet. It is 17 times the mass of Earth, slightly more massive than its near-twin Uranus. Neptune is denser and physically smaller than Uranus because its greater mass causes more gravitational compression of its atmosphere.",
+      image: "../../../assets/Neptune.gif",
+      sound: "../../../assets/Neptune.mp3",
+    },
+    {
+      slug: "asteroid",
+      title: "Asteroid",
+      text: "Asteroids are minor planets, especially of the inner Solar System. Larger asteroids have also been called planetoids. These terms have historically been applied to any astronomical object orbiting the Sun that did not resolve into a disc in a telescope and was not observed to have characteristics of an active comet such as a tail. As minor planets in the outer Solar System were discovered that were found to have volatile-rich surfaces similar to comets, these came to be distinguished from the objects found in the main asteroid belt.",
+      image: "../../../assets/Asteroid.png",
+      sound: "../../../assets/Asteroid.mp3",
+    },
+    {
+      slug: "comet",
+      title: "Comet",
+      text: "A comet is an icy, small Solar System body that, when passing close to the Sun, warms and begins to release gases, a process called outgassing. This produces a visible atmosphere or coma, and sometimes also a tail. These phenomena are due to the effects of solar radiation and the solar wind acting upon the nucleus of the comet. Comet nuclei range from a few hundred meters to tens of kilometers across and are composed of loose collections of ice, dust, and small rocky particles.",
+      image: "../../../assets/Comet.gif",
+      sound: "../../../assets/Comet.mp3",
     },
     {
       slug: "moon",
-      title: "The ultimate Astro handbook",
-      text: "If you want to learn Astro, you must read this book.",
+      title: "Moon",
+      text: "The Moon is Earth's only natural satellite. At about one-quarter the diameter of Earth, it is the largest natural satellite in the Solar System relative to the size of its planet, the fifth largest satellite in the Solar System overall, and is larger than any dwarf planet. Orbiting Earth at an average distance of 384,400 km (238,900 mi), or about 30 times Earth's diameter, its gravitational influence produces Earth's tides and slightly lengthens Earth's day.",
       image: "../../../assets/Moon.gif",
+      sound: "../../../assets/Moon.mp3",
     },
   ];
-  return pages.map(({ slug, title, text, image }) => {
+
+  return pages.map(({ slug, title, text, image, sound }) => {
     return {
       params: { slug },
-      props: { title, text, image },
+      props: { title, text, image, sound },
     };
   });
 }
@@ -37,7 +104,7 @@ const { title, text, image } = Astro.props;
 <Layout>
   <div class="flex">
     <section class="sidebar"><Sidebar /></section>
-    <section class=" text-white bg-black w-full">
+    <section class="text-white bg-black w-full">
       <div class="planet-details flex justify-between items-center w-full">
         <div class="content p-10">
           <h1 class="text-3xl font-bold">{title}</h1>
