--- a/src/pages/space/earth.astro
+++ b/src/pages/space/earth.astro
@@ -45,7 +45,7 @@ const image = "../../../assets/Earth.gif";
           🔊
         </button>
         <audio id="audio" class="hidden">
-          <source src="../../../assets/sound.mp3" type="audio/mpeg" />
+          <source src="../../../assets/Earth.mp3" type="audio/mpeg" />
           Your browser does not support the audio element.
         </audio>
         <p>This is how Earth Sounds</p>
