asteriods data added

--- a/src/components/sidebar.astro
+++ b/src/components/sidebar.astro
@@ -8,8 +8,8 @@ const objects = [
   { name: "Jupiter", slug: "jupiter", image: "../../assets/planets/jupiter.webp" },
   { name: "Saturn", slug: "saturn", image: "../../assets/planets/saturn.png" },
   { name: "Uranus", slug: "uranus", image: "../../assets/planets/uranus.webp" },
-  { name: "Neptune", slug: "neptune", image: "../../assets/Neptune.png" },
-  { name: "Asteroids", slug: "asteroids", image: "../../assets/Asteroids.png" },
+  { name: "Neptune", slug: "neptune", image: "../../assets/planets/neptune.png" },
+  { name: "Commets", slug: "commet", image: "../../assets/planets/commet.png" },
 
 ];
 const { object } = Astro.params;
