--- a/src/components/sidebar.astro
+++ b/src/components/sidebar.astro
@@ -9,7 +9,7 @@ const objects = [
   { name: "Saturn", slug: "saturn", image: "../../assets/planets/saturn.png" },
   { name: "Uranus", slug: "uranus", image: "../../assets/planets/uranus.webp" },
   { name: "Neptune", slug: "neptune", image: "../../assets/planets/neptune.png" },
-  { name: "Commets", slug: "commet", image: "../../assets/planets/commet.png" },
+  { name: "Comet", slug: "commet", image: "../../assets/planets/commet.png" },
 
 ];
 const { object } = Astro.params;
