--- a/src/pages/space/commet.astro
+++ b/src/pages/space/commet.astro
@@ -2,7 +2,7 @@
 import Layout from "../../layouts/layout.astro";
 import Sidebar from "../../components/sidebar.astro";
 
-const title = "Commet";
+const title = "Comet";
 const image = "../../../assets/planets/Commet.png";
 const comets = [
   { name: "Halley's Comet", period: "76 years", nextArrival: "2061" },
