deployment specific changes

--- a/src/pages/quiz.astro
+++ b/src/pages/quiz.astro
@@ -37,7 +37,7 @@ import Layout from "../layouts/layout.astro";
   </div>
 </Layout>
 
-<script>
+<script is:inline>
   const quizData = [
     // Question 1 - Celestial Body Showdown (Multiple Choice)
     {
